--- a/package.json
+++ b/package.json
@@ -38,5 +38,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "trustedDependencies": [
+    "core-js",
+    "core-js-pure"
+  ],
+  "devDependencies": {
+    "@biomejs/biome": "2.1.4"
   }
 }
