--- a/package.json
+++ b/package.json
@@ -1,25 +1,38 @@
 {
-        "name": "edulinktutor-fe",
-        "version": "0.1.0",
-        "private": true,
+        "browserslist": {
+                "development": [
+                        "last 1 chrome version",
+                        "last 1 firefox version",
+                        "last 1 safari version"
+                ],
+                "production": [
+                        ">0.2%",
+                        "not dead",
+                        "not op_mini all"
+                ]
+        },
         "dependencies": {
+                "@phosphor-icons/react": "^2.1.10",
                 "@testing-library/dom": "^10.4.1",
                 "@testing-library/jest-dom": "^6.6.4",
                 "@testing-library/react": "^16.3.0",
                 "@testing-library/user-event": "^13.5.0",
+                "@types/react": "^19.1.10",
+                "@types/react-dom": "^19.1.7",
+                "axios": "^1.11.0",
                 "react": "^19.1.1",
                 "react-dom": "^19.1.1",
+                "react-international-phone": "^4.6.0",
                 "react-phone-input-2": "^2.15.1",
                 "react-router-dom": "^7.8.0",
                 "react-scripts": "5.0.1",
                 "swiper": "^11.2.10",
-                "web-vitals": "^2.1.4"
+                "typescript": "^5.9.2",
+                "web-vitals": "^2.1.4",
+                "zod": "^4.0.17"
         },
-        "scripts": {
-                "start": "react-scripts start",
-                "build": "react-scripts build",
-                "test": "react-scripts test",
-                "eject": "react-scripts eject"
+        "devDependencies": {
+                "@biomejs/biome": "2.1.4"
         },
         "eslintConfig": {
                 "extends": [
@@ -27,23 +40,17 @@
                         "react-app/jest"
                 ]
         },
-        "browserslist": {
-                "production": [
-                        ">0.2%",
-                        "not dead",
-                        "not op_mini all"
-                ],
-                "development": [
-                        "last 1 chrome version",
-                        "last 1 firefox version",
-                        "last 1 safari version"
-                ]
+        "name": "edulinktutor-fe",
+        "private": true,
+        "scripts": {
+                "build": "react-scripts build",
+                "eject": "react-scripts eject",
+                "start": "react-scripts start",
+                "test": "react-scripts test"
         },
         "trustedDependencies": [
                 "core-js",
                 "core-js-pure"
         ],
-        "devDependencies": {
-                "@biomejs/biome": "2.1.4"
-        }
+        "version": "0.1.0"
 }
