--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
                 "build": "react-scripts build",
                 "eject": "react-scripts eject",
                 "start": "react-scripts start",
-                "test": "react-scripts test"
+                "test": "react-scripts test",
+                "dev": "bun run start src/index.js"
         },
         "trustedDependencies": [
                 "core-js",
